--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,10 @@
         %sapper.base%
 
         <link rel="stylesheet" href="index.css" />
+        <link
+            href="https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css"
+            rel="stylesheet"
+        />
         <link rel="manifest" href="manifest.json" />
         <link
             rel="apple-touch-icon"
