--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
 
         %sapper.base%
 
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="index.css?v=DATE" />
         <link
             href="https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css"
             rel="stylesheet"
